Refactored team scraping so that it was an incremental part of Club scraping